More C99 code gen fixes